<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="net.neoturbine.veles.QSOEditFragment">

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/qso_station"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/qso_edit_station"
            android:inputType="textNoSuggestions|textCapCharacters" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/qso_start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/qso_edit_start_time"
            android:inputType="datetime" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/qso_end_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/qso_edit_end_time"
            android:inputType="datetime" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <AutoCompleteTextView
            android:id="@+id/qso_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/qso_edit_mode"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/qso_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/qso_edit_comment"
            android:lines="3"
            android:inputType="textMultiLine" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>
