<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="net.neoturbine.veles.qso.detail.DetailsContracts.ViewModel" />
    </data>

    <LinearLayout
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="net.neoturbine.veles.qso.detail.QSODetailFragment">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/qso_edit_my_station"
                android:inputType="none"
                android:text="@{viewmodel.myStation}"
                android:textIsSelectable="true"
                tools:ignore="Deprecated"
                tools:text="My Call Sign" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/qso_edit_start_time"
                android:inputType="none"
                android:text="@{viewmodel.startTime}"
                android:textIsSelectable="true"
                tools:ignore="Deprecated"
                tools:text="Start Time" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/qso_edit_end_time"
                android:inputType="none"
                android:text="@{viewmodel.endTime}"
                android:textIsSelectable="true"
                tools:ignore="Deprecated"
                tools:text="End Time" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/qso_edit_mode"
                android:inputType="none"
                android:text="@{viewmodel.mode}"
                android:textIsSelectable="true"
                tools:ignore="Deprecated"
                tools:text="Mode" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/qso_power"
                android:inputType="none"
                android:text="@{viewmodel.power}"
                android:textIsSelectable="true"
                tools:ignore="Deprecated"
                tools:text="Power" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/qso_edit_tx_freq"
                android:inputType="none"
                android:text="@{viewmodel.transmissionFrequency}"
                android:textIsSelectable="true"
                tools:ignore="Deprecated"
                tools:text="TX Freq" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/qso_edit_rx_freq"
                android:inputType="none"
                android:text="@{viewmodel.receivingFrequency}"
                android:textIsSelectable="true"
                tools:ignore="Deprecated"
                tools:text="RX Freq" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/qso_edit_other_quality"
                android:inputType="none"
                android:text="@{viewmodel.otherQuality}"
                android:textIsSelectable="true"
                tools:ignore="Deprecated"
                tools:text="RX Quality" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/qso_edit_my_quality"
                android:inputType="none"
                android:text="@{viewmodel.myQuality}"
                android:textIsSelectable="true"
                tools:ignore="Deprecated"
                tools:text="TX Quality" />
        </android.support.design.widget.TextInputLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/qso_details_maps"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:visibility="@{viewmodel.mapsVisibility}">

            <android.support.constraint.Guideline
                android:id="@+id/qso_details_maps_guideline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.51" />

            <TextView
                android:id="@+id/qso_detail_other_location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/half_list_text_margin"
                android:layout_marginStart="@dimen/list_text_margin"
                android:layout_marginTop="@dimen/list_text_margin"
                android:text="@string/qso_edit_other_location"
                android:visibility="@{viewmodel.otherLocationVisibility}"
                app:layout_constraintLeft_toLeftOf="@+id/qso_details_maps"
                app:layout_constraintRight_toLeftOf="@+id/qso_details_maps_guideline"
                app:layout_constraintTop_toTopOf="@+id/qso_details_maps" />

            <TextView
                android:id="@+id/qso_detail_my_location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/list_text_margin"
                android:layout_marginStart="@dimen/half_list_text_margin"
                android:layout_marginTop="@dimen/list_text_margin"
                android:text="@string/qso_edit_my_location"
                android:visibility="@{viewmodel.myLocationVisibility}"
                app:layout_constraintLeft_toLeftOf="@+id/qso_details_maps_guideline"
                app:layout_constraintRight_toRightOf="@+id/qso_details_maps"
                app:layout_constraintTop_toTopOf="@+id/qso_details_maps" />

            <fragment
                android:id="@+id/qso_detail_other_location"
                android:name="net.neoturbine.veles.qso.detail.VelesLocationMap"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="@dimen/half_list_text_margin"
                android:layout_marginTop="@dimen/half_list_text_margin"
                app:layout_constraintBottom_toBottomOf="@+id/qso_details_maps"
                app:layout_constraintLeft_toLeftOf="@+id/qso_details_maps"
                app:layout_constraintRight_toLeftOf="@+id/qso_details_maps_guideline"
                app:layout_constraintTop_toBottomOf="@+id/qso_detail_my_location_text" />

            <fragment
                android:id="@+id/qso_detail_my_location"
                android:name="net.neoturbine.veles.qso.detail.VelesLocationMap"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/half_list_text_margin"
                android:layout_marginTop="@dimen/half_list_text_margin"
                app:layout_constraintBottom_toBottomOf="@+id/qso_details_maps"
                app:layout_constraintLeft_toLeftOf="@+id/qso_details_maps_guideline"
                app:layout_constraintRight_toRightOf="@+id/qso_details_maps"
                app:layout_constraintTop_toBottomOf="@+id/qso_detail_other_location_text" />
        </android.support.constraint.ConstraintLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/qso_edit_comment"
                android:inputType="none"
                android:text="@{viewmodel.comment}"
                android:textIsSelectable="true"
                tools:ignore="Deprecated"
                tools:text="Some Comments Here" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</layout>