<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <import type="android.view.View"/>

        <import type="net.neoturbine.veles.R"/>

        <variable
            name="currentTab"
            type="net.neoturbine.veles.HamLocationPicker.CurrentTabHolder"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/location_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/list_text_margin"
            android:paddingStart="@dimen/list_text_margin"/>

        <RadioGroup
            android:id="@+id/location_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/location_current_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_current"/>

            <RadioButton
                android:id="@+id/location_locator_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_locator"/>

            <RadioButton
                android:id="@+id/location_search_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_search"/>

            <RadioButton
                android:id="@+id/location_coordinate_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_coordinate"/>
        </RadioGroup>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{currentTab.currentTab.getRadioId() == R.id.location_search_radio ? View.VISIBLE : View.GONE}"
            card_view:cardCornerRadius="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <fragment
                    android:id="@+id/place_autocomplete_fragment"
                    android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout="@layout/place_autocomplete_fragment"/>

                <TextView
                    android:id="@+id/location_search_locator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/place_autocomplete_fragment"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{currentTab.currentTab.getRadioId() == R.id.location_current_radio ? View.VISIBLE : View.GONE}"
            card_view:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/location_current_locator"
                android:text="@string/location_current_no_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{currentTab.currentTab.getRadioId() == R.id.location_locator_radio ? View.VISIBLE : View.GONE}"
            card_view:cardCornerRadius="4dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/location_manual_locator_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/location_manual_locator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location_locator_hint"
                    android:inputType="text|textNoSuggestions"/>

            </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{currentTab.currentTab.getRadioId() == R.id.location_coordinate_radio ? View.VISIBLE : View.GONE}">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/coordinate_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.constraint.Guideline
                    android:id="@+id/guideline1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.51"
                    tools:layout_editor_absoluteY="0dp"
                    tools:layout_editor_absoluteX="0dp"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/location_coordinate_lon_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/half_list_text_margin"
                    android:layout_marginStart="@dimen/list_text_margin"
                    android:layout_marginTop="@dimen/list_text_margin"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/guideline1"
                    app:layout_constraintTop_toTopOf="parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/location_coordinate_lon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/location_coordinate_longitude"
                        android:inputType="number|numberDecimal|numberSigned"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/location_coordinate_lat_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/list_text_margin"
                    android:layout_marginStart="@dimen/half_list_text_margin"
                    android:layout_marginTop="@dimen/list_text_margin"
                    app:layout_constraintLeft_toLeftOf="@+id/guideline1"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/location_coordinate_lat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/location_coordinate_latitude"
                        android:inputType="number|numberDecimal|numberSigned"/>

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/location_coordinate_locator"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/list_text_margin"
                    android:layout_marginStart="@dimen/list_text_margin"
                    android:layout_marginTop="@dimen/list_text_margin"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/location_coordinate_lat_layout"/>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</layout>