<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <import type="android.view.View"/>

        <import type="net.neoturbine.veles.R"/>

        <variable
            name="currentTab"
            type="net.neoturbine.veles.HamLocationEditView.CurrentTabHolder"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qso_edit_my_location"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/location_current_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_current"/>

            <RadioButton
                android:id="@+id/location_qth_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_qth"/>

            <RadioButton
                android:id="@+id/location_search_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_search"/>

            <RadioButton
                android:id="@+id/location_coordinate_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_coordinate"/>
        </RadioGroup>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{currentTab.currentTab.getRadioId() == R.id.location_search_radio ? View.VISIBLE : View.GONE}"
            card_view:cardCornerRadius="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <fragment
                    android:id="@+id/place_autocomplete_fragment"
                    android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:id="@+id/location_search_qth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/place_autocomplete_fragment"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{currentTab.currentTab.getRadioId() == R.id.location_current_radio ? View.VISIBLE : View.GONE}"
            card_view:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/location_current_qth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{currentTab.currentTab.getRadioId() == R.id.location_qth_radio ? View.VISIBLE : View.GONE}"
            card_view:cardCornerRadius="4dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/location_manual_qth_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/location_manual_qth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location_qth_hint"
                    android:inputType="text|textNoSuggestions"/>

            </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{currentTab.currentTab.getRadioId() == R.id.location_coordinate_radio ? View.VISIBLE : View.GONE}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/location_coordinate_lon_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/location_coordinate_lon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/location_coordinate_longitude"
                        android:inputType="number|numberDecimal|numberSigned"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/location_coordinate_lat_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/location_coordinate_lat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/location_coordinate_latitude"
                        android:inputType="number|numberDecimal|numberSigned"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</layout>